--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>glTest5</name>
+	<name>mingwtest2</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -24,4 +24,10 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<variableList>
+		<variable>
+			<name>MINGW64_LIB</name>
+			<value>file:/C:/msys/mingw64/lib</value>
+		</variable>
+	</variableList>
 </projectDescription>
